# coffee-sim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ISSUES.md  LONG_TERM_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHYSICS_VALIDATION_PLAN.md  PLAN-calibration.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  long-horizon.yml
calibration/: README.md  fetch_shots.py  filter_and_store.py  requirements.txt
calibration/analysis/: assemble_params.py  common.py  compute_permeability.py  fit_darcy.py  fit_extraction.py  fit_thermal.py  plot_dataset.py
calibration/curated/: all_shots.json  metadata.json
calibration/tests/: conftest.py  test_kinetics_vs_decent.py  test_permeability_range.py  test_pressure_flow.py  test_thermal_decay.py
crates/sim-wasm/: Cargo.toml
crates/sim-wasm/src/: gpu_sim_3d.rs  lib.rs  renderer.rs  sdf.rs
crates/sim-wasm/src/mpm_3d/: bed.rs  brew_config.rs  debug.rs  filter.rs  filter_mesh.rs  inflow.rs  mod.rs  physics_tests.rs  pipelines.rs  shader.rs  state.rs  units.rs
crates/sim-wasm/www/: index.html  main.js  styles.css
crates/sim-wasm/www-3d/: index.html  main.js  styles.css
crates/sim-wasm/www-3d/demo/: index.html  main.js  styles.css
docs/: ARCHITECTURE.md  BRANCH_AUDIT.md  COFFEE_BED_REALISM_PLAN.md  ROADMAP.md
examples/: comparison.py  espresso_9bar.py  v60_pourover.py
python/: __init__.py  analysis.py  config.py  presets.py  sim.py  viz.py
rust/src/: fluid.rs  (+6 more)
tests/: test_darcy.py  test_extraction.py  test_integration.py  test_physics.py  test_thermal.py
validation/: validate_1d.py
(+12 files in other folders)
