[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "coffee-sim"
version = "0.1.0"
description = "Physics-based coffee extraction simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyvista>=0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maturin>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "coffee_sim_core"
