[package]
name = "coffee-sim-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coffee-sim-core = { path = "../sim-core", default-features = false }
wasm-bindgen = "0.2"
wgpu = "29.0.1"
bytemuck = { version = "1.24", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
